[Feat] 로그인, 회원가입, 커뮤니티 연동

--- a/Fitbuddy/src/main/webapp/WEB-INF/web.xml
+++ b/Fitbuddy/src/main/webapp/WEB-INF/web.xml
@@ -29,6 +29,10 @@
 		<servlet-name>DispatcherServlet</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
+	<!-- 로그인 30분 저장을 위해 작성한 코드 오류나면 삭제 -->
+	<session-config>
+    	<session-timeout>30</session-timeout> <!-- 세션 유지 시간을 30분으로 설정 -->
+	</session-config>
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
     <welcome-file>index.jsp</welcome-file>
